app/assets/stylesheets/master.css.scss
@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,800);
@import url(https://fonts.googleapis.com/css?family=Nixie+One);
@import url(https://fonts.googleapis.com/css?family=Quattrocento:400,700);

::-moz-selection { /* Code for Firefox */
    background: rgba(68, 38, 64, 0.75);
}

::selection { 
    background: rgba(68, 38, 64, 0.75);
}

#btn-success-id {
  background-color: #442640;
  border-color: #442640;
}

#btn-success-id:hover {
  background-color: #381f35;
  border-color: #381f35;
}

#btn-success-id:focus {
  background-color: #381f35;
  border-color: #381f35;
}

.hero h1 {
  font-family: 'Quattrocento', serif;
  color: #442640;
  font-size: 8vh;
  font-weight: 700;
  text-shadow: rgba(0,0,0,0.95) 1px 1px;
}

.hero h2 {
  font-family: 'Quattrocento', serif;
  color: #fbeee5;
  font-weight: 700;
  font-size: 4vh;
  text-shadow: rgba(0,0,0,0.95) 1px 1px;
}

.hero {
  position: relative;
  text-align: center;
  width:100%;
}

.inner {
  position:absolute;
  top:50%; left:50%;
  transform: translate(-50%, -50%);
  width: 100%;
  height: 200px;
}

.box {
  height: 50vh;
}

#nav-link-id {
  font-weight: 400;
  font-style: bold;
  color: #efc6a8;
}

#nav-link-id:hover {
  color: #fbeee5;
}

#bs-example-navbar-collapse-1 {
  border-color: #efc6a8;
}

#navbar-brand-id {
  margin-top: -10px;
  font: 32px/42px 'Open Sans', sans-serif;
  font-weight: 800;
  text-transform: uppercase;
  color: #efc6a8;
  letter-spacing: 1px;
}

#navbar-brand-id:hover {
  color: #fbeee5;
}

#navbar-toggle-id {
  border-color: transparent;
  background-color: #efc6a8;
}

#navbar-toggle-id:hover {
  border-color: transparent;
  background-color: #fbeee5;
}

#navbar-toggle-id:focus {
  border-color: transparent;
  background-color: #fbeee5;
}

#icon-bar-id {
  background-color: #442640;
}

.navbar#navbar-id {
  z-index: 9999;
  position: fixed;
  top: 0;
  width: 100%;
  border-radius: 0;
  background-color: #442640;
  border-color: #442640;
}

.spacer {
  height: 30px;
  width: 100%;
  margin-top: 0;
  margin-bottom: 0;
}

.hero {
  background:url('hero.jpg') no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.box1 {
  background-color: #efc6a8;
}

.box2 {
  background-color: #fbeee5;
}

.box3 {
  background-color: #3a354c;
}

.box4 {
  background-color: #442640;
}

.box5 {
  background-color: #07223d;
}

